--- a/stylos.css
+++ b/stylos.css
@@ -90,3 +90,33 @@ nav{
     font-size: 1.5rem;
 }
 
+
+@media(min-width:320px) and (max-width:480px){
+    body{
+        background-color: aquamarine;
+    }
+}
+
+@media(min-width:481px) and (max-width:768px){
+    body{
+        background-color: burlywood;
+    }
+}
+
+@media(min-width:769px) and (max-width:1024px){
+    body{
+        background-color: yellowgreen;
+    }
+}
+
+@media(min-width:1025px) and (max-width:1200px){
+    body{
+        background-color: white;
+    }
+}
+
+@media(min-width:1201px) and (max-width:2000px){
+    body{
+        background-color: red;
+    }
+}
