--- a/stylos.css
+++ b/stylos.css
@@ -94,6 +94,8 @@ nav{
 @media(min-width:100px) and (max-width:480px){
     body{
         background-color: aquamarine;
+        font-size: 1rem;
+        margin-right: 10px;
     }
 }
 
