--- a/stylos.css
+++ b/stylos.css
@@ -73,7 +73,7 @@ nav{
 }
 
 .vh-100{
-    height: calc(100vh - var(--nav-heigt));
+    height: calc(100vh - var(--nav-heigt )- var(--nav-heigt));
 }
 .cotenedor-texto{
     flex-basis: 45%;
@@ -147,6 +147,11 @@ footer div{
         font-weight: 400;
         font-size: 1rem;
     }
+
+    .h2{
+        font-size: 1.5rem;
+        font-weight: 500;
+    }
     .zeno{
         width: 150px;
         height: 350px;
@@ -158,7 +163,7 @@ footer div{
         background-color: yellow;
     }
     .nombre{
-        font-size: 1.5rem;
+        font-size: 1rem;
         font-weight: 400;
     }
     .descripcion{
